modified:   contracts/config.json 	deleted:    contracts/src/Add.test.ts 	deleted:    contracts/src/Add.ts 	new file:   contracts/src/ConcealedCare.ts 	new file:   contracts/src/demo.ts 	modified:   contracts/src/index.ts 	deleted:    contracts/src/interact.ts 	modified:   ui/package-lock.json 	modified:   ui/package.json 	deleted:    ui/src/components/GradientBG.js 	new file:   ui/src/components/Sidebar.tsx 	new file:   ui/src/contexts/UserTypeContext.js 	modified:   ui/src/pages/_app.page.tsx 	new file:   ui/src/pages/accom-proof.page.tsx 	new file:   ui/src/pages/all-pages.page.tsx 	modified:   ui/src/pages/index.page.tsx 	new file:   ui/src/pages/new-request.page.tsx 	new file:   ui/src/pages/patients.page.tsx 	modified:   ui/src/pages/reactCOIServiceWorker.tsx 	new file:   ui/src/pages/user-request.page.tsx 	new file:   ui/src/pages/verify-accom-proof.page.tsx 	new file:   ui/src/pages/zkappWorker.ts 	new file:   ui/src/pages/zkappWorkerClient.ts 	new file:   ui/src/styles/App.css 	deleted:    ui/src/styles/Home.module.css     new file:   ui/src/styles/Sidebar.css 	modified:   ui/src/styles/globals.css 	new file:   ui/src/styles/index.css 	new file:   ui/src/styles/styles.css 	new file:   ui/src/util.ts

--- a/contracts/config.json
+++ b/contracts/config.json
@@ -1,4 +1,13 @@
 {
   "version": 1,
-  "deployAliases": {}
+  "deployAliases": {
+    "berkeley": {
+      "url": "https://proxy.berkeley.minaexplorer.com/graphql",
+      "keyPath": "keys/berkeley.json",
+      "feepayerKeyPath": "C:\\Users\\samue/.cache/zkapp-cli/keys/berkeley1.json",
+      "feepayerAlias": "berkeley1",
+      "fee": "0.1",
+      "smartContract": "ConcealedCare"
+    }
+  }
 }
