--- a/ui/package.json
+++ b/ui/package.json
@@ -20,11 +20,12 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
+    "o1js": "0.*",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "o1js": "0.*"
+    "typescript": "5.2.2"
   }
 }
