modified:   contracts/config.json 	new file:   ui/dist/output.css 	modified:   ui/package-lock.json 	modified:   ui/package.json 	modified:   ui/src/pages/_app.page.tsx 	modified:   ui/src/pages/index.page.tsx 	modified:   ui/src/pages/new-request.page.tsx 	modified:   ui/src/pages/reactCOIServiceWorker.tsx 	modified:   ui/src/pages/zkappWorkerClient.ts 	new file:   ui/src/styles/Home.module.css 	modified:   ui/tailwind.config.js

--- a/contracts/config.json
+++ b/contracts/config.json
@@ -8,6 +8,14 @@
       "feepayerAlias": "test101",
       "fee": "0.1",
       "smartContract": "ConcealedCare"
+    },
+    "berkeley": {
+      "url": "https://proxy.berkeley.minaexplorer.com/graphql",
+      "keyPath": "keys/berkeley.json",
+      "feepayerKeyPath": "C:\\Users\\samue/.cache/zkapp-cli/keys/03-deployberkeley.json",
+      "feepayerAlias": "03-deployberkeley",
+      "fee": "0.1",
+      "smartContract": "ConcealedCare"
     }
   }
 }
